# sage-agentic-tooluse

./: .gitignore  README.md  pyproject.toml  quickstart.sh
.github/: copilot-instructions.md
docs/adr/: 0001-strategy-behavior-consistency.md  0001-tool-selection-runtime-decoupling.md  0001-unify-registry-factory-entrypoint.md
docs/migration/: selector-factory-migration.md
src/sage_libs/: __init__.py
src/sage_libs/sage_agentic_tooluse/: __init__.py  base.py  dfsdt_selector.py  embedding_selector.py  gorilla_selector.py  hybrid_selector.py  registry.py  schemas.py
src/sage_libs/sage_agentic_tooluse/retriever/: cache.py  vector_index.py
tests/: test_issue2_runtime_decoupling.py  test_issue3_registry_factory_boundary.py  test_smoke.py  test_strategy_behavior_consistency.py
