[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isage-agentic-tooluse"
version = "0.1.0.2"
description = "Tool retrieval and ranking algorithms for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn" },
]
keywords = [
    "sage",
    "tool-selection",
    "tool-use",
    "tool-retrieval",
    "tool-ranking",
    "llm",
    "agents",
    "intellistream",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.0,<2.3.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
full = []

dev = [
    # dev includes [full] — no need for a separate extras install
    "isage-agentic-tooluse[full]",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.4",
    "mypy>=1.0.0",
]

all = [
    "isage-agentic-tooluse[dev]",
]

[project.urls]
Homepage = "https://github.com/intellistream/sage-agentic-tooluse"
Documentation = "https://intellistream.github.io/SAGE-Pub/"
Repository = "https://github.com/intellistream/sage-agentic-tooluse"
Issues = "https://github.com/intellistream/sage-agentic-tooluse/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sage_libs.sage_agentic_tooluse"]

[tool.setuptools.package-data]
"sage_libs.sage_agentic_tooluse" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "sage_libs.sage_agentic_tooluse.*"
ignore_missing_imports = true

license = "MIT"
